# numma

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/numma/: __init__.py
src/numma/optimize/: __init__.py  rootfinder.py
tests/: test_optimize.py
